--- a/ClassicalMusicQuiz/Base.lproj/Main.storyboard
+++ b/ClassicalMusicQuiz/Base.lproj/Main.storyboard
@@ -460,7 +460,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flower" translatesAutoresizingMaskIntoConstraints="NO" id="hJK-BV-RWk">
-                                <rect key="frame" x="117.5" y="268.5" width="140" height="190.00000000000011"/>
+                                <rect key="frame" x="117.5" y="268.5" width="140" height="190"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="190" id="03E-ZW-Pys"/>
                                     <constraint firstAttribute="width" constant="140" id="3k3-Ph-KbL"/>
